2005-05-01  Mark D. Baushke  <mdb@cvshome.org>

	* regex.c: Update from GNULIB.

2005-04-25  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2005-04-15  Derek Price  <derek@ximbiot.com>

	* Makefile.am (DISTCLEANFILES): Add getdate.log.
	* .cvsignore: Ditto.
	* test-getdate.sh: Add new tests.
	(verify, skip, valid_timezone): New functions.

2005-04-12  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2005-04-06  Derek Price  <derek@ximbiot.com>

	* getdate.y: Update from GNULIB.

2005-04-03  Mark D. Baushke  <mdb@cvshome.org>

	* strtol.c: Update from GNULIB.

2005-03-29  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c, strftime.c: Update from GNULIB.

2005-03-23  Derek Price  <derek@ximbiot.com>

	* Makefile.am (getdate_SOURCES): Remove sources that are now included
	via $(noinst_LIBRARIES).

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c, regex.c, stdint_.h, strftime.c, strtol.c: Update from
	GNULIB.

2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* mktime.c, save-cwd.c, strftime.c, strtol.c: Update from GNULIB.

2005-03-08  Conrad T. Pino  <Conrad@Pino.com>

	* .cvsignore: Add stdint.h entry.

2005-03-07  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Synchronize with GNULIB updates.
	Remove valloc.c file. Add files __fpending.c, __fpending.h,
	chdir-long.h, closeout.c, closeout.h, getcwd.h,
	pagealign_alloc.c, pagealign_alloc.h, quotearg.c, quotearg.h.
	* libcvs.dep, libcvs.mak: Regenerate for libcvs.dsp change.

2005-03-07  Mark D. Baushke  <mdb@cvshome.org>

	* pagealign_alloc.c: Update from GNULIB.

2005-03-04  Jim Hyslop  <jhyslop@ieee.org>

	* xtime.h: added include guards to fix compile errors on IRIX 5.3
	(Patch from Georg Schwarz <georg.scwarz@freenet.de>.)

2005-03-03  Derek Price  <derek@ximbiot.com>

	* pagealign_alloc.c, pagealign_alloc.h: New files from GNULIB.
	* valloc.c: Remove this obsolete file.

2005-03-02  Jim Meyering  <jim@meyering.net>
